# ATxM

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: darker.yml  pytest.yml  python-publish.yml  ruff.yaml
atxm/: __init__.py  _task.py  exceptions.py  logging.py  machine.py  main.py  state.py  strategies.py  tacker.py  tracker.py  tx.py  utils.py
examples/: retrytx.py
scripts/: relock_dependencies.sh
tests/: ape-config.yaml  conftest.py  test_api.py  test_faults.py  test_machine.py  test_state.py  test_strategy.py  test_tracker.py
