[tool.poetry]
name = "atxm"
version = "0.3.0"
authors = [
    "NuCypher <devs@nucypher.com>",
]
description = "Automatic Transaction Machine (ATxM) for Ethereum"
readme = "README.md"
repository = "https://github.com/nucypher/atxm"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[tool.poetry.urls]
Homepage = "https://github.com/nucypher/atxm"
Issues = "https://github.com/nucypher/atxm/issues"


[tool.poetry.dependencies]
python = ">=3.9,<4"
web3 = "^6.15.1"
twisted = "*"
eth-account = ">=0.10.0"
eth-typing = "*"
eth-utils = "*"
eth-abi = "*"
eth-keys = "*"
python-statemachine = "*"
rlp = "*"
urllib3 = "*"

[tool.poetry.dev-dependencies]
# testing
eth-ape = "*"
pytest = "*"
pytest-mock = "*"
pytest-twisted = "*"
# quality control
pre-commit = "*"
black = "*"
ruff = "*"


[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nucypher"]
